samples/_failures_safe/1761319262_67e23e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2b759b56.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_2b759b56.c:151:23: error: missing terminating " character
  151 |     } else if (strchr("
      |                       ^
./samples/SAFE/__tmp_2b759b56.c:151:5: error: expected expression at end of input
  151 |     } else if (strchr("
      |     ^
./samples/SAFE/__tmp_2b759b56.c:151:16: error: too few arguments to function ‘strchr’
  151 |     } else if (strchr("
      |                ^~~~~~
In file included from ./samples/SAFE/__tmp_2b759b56.c:4:
/usr/include/string.h:246:14: note: declared here
  246 | extern char *strchr (const char *__s, int __c)
      |              ^~~~~~
./samples/SAFE/__tmp_2b759b56.c:151:5: error: expected declaration or statement at end of input
  151 |     } else if (strchr("
      |     ^
